Remove unnecessary parameters from the metadata formatter controller (#110)